[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "vvvvid_downloader"
author = "Nearata"
author-email = "nearata@protonmail.com"
home-page = "https://github.com/nearata/vvvvid-downloader"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9"
]
description-file = "README.md"
requires = [
    "inquirer ==2.9.1",
    "httpx ==0.21.1",
    "rich ==10.16.2",
    "click ==8.0.3",
    "h2 >=3,<5"
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"
