[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "vvvvid_downloader"
author = "Nearata"
author-email = "nearata@protonmail.com"
home-page = "https://github.com/nearata/vvvvid-downloader"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9"
]
description-file = "README.md"
requires = [
    "inquirer ==3.1.3",
    "httpx ==0.24.0",
    "rich ==13.3.5",
    "click ==8.1.3",
    "h2 >=3,<5"
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"
